<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:paddingBottom="@dimen/activity_vertical_margin"
	android:paddingLeft="@dimen/activity_horizontal_margin"
	android:paddingRight="@dimen/activity_horizontal_margin"
	android:paddingTop="@dimen/activity_vertical_margin"
	tools:context=".RomanizationTest" >

	<EditText
		android:id="@+id/etToKanaText"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:layout_alignBaseline="@+id/btEnterButton"
		android:layout_alignParentLeft="true"
		android:layout_alignParentTop="true"
		android:layout_toLeftOf="@id/btEnterButton"
		android:focusableInTouchMode="true"
		android:hint="@string/to_kana_hint"
		android:singleLine="true" >

		<requestFocus />
	</EditText>

	<Button
		android:id="@id/btEnterButton"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_alignParentRight="true"
		android:layout_alignParentTop="true"
		android:onClick="onEnterClicked"
		android:text="@string/enter" />

	<Switch
		android:id="@+id/swHiraganaOrKatakana"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_alignParentLeft="true"
		android:layout_below="@id/btEnterButton"
		android:checked="true"
		android:text="@string/switch_kana"
		android:textOff="@string/switch_katakana"
		android:textOn="@string/switch_hiragana" />

	<TextView
		android:id="@+id/tvDisplayKana"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_alignParentLeft="true"
		android:layout_below="@id/swHiraganaOrKatakana"
		android:text=""
		android:textIsSelectable="true"
		android:textSize="16sp" />

</RelativeLayout>