<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:paddingBottom="@dimen/activity_vertical_margin"
	android:paddingLeft="@dimen/activity_horizontal_margin"
	android:paddingRight="@dimen/activity_horizontal_margin"
	android:paddingTop="@dimen/activity_vertical_margin"
	tools:context=".MainActivity" >

	<EditText
		android:id="@+id/etSearchText"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:layout_alignBaseline="@+id/btSearchButton"
		android:layout_alignParentLeft="true"
		android:layout_alignParentTop="true"
		android:layout_toLeftOf="@id/btSearchButton"
		android:focusableInTouchMode="true"
		android:hint="@string/search_hint"
		android:singleLine="true" >

		<requestFocus />
	</EditText>

	<Button
		android:id="@id/btSearchButton"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_alignParentRight="true"
		android:layout_alignParentTop="true"
		android:onClick="onSearchClicked"
		android:text="@string/search" />

	<Button
		android:id="@+id/btTryRomanizationTest"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_alignParentLeft="true"
		android:layout_below="@id/etSearchText"
		android:layout_marginTop="8dp"
		android:onClick="onTestRomanizationClicked"
		android:text="@string/title_activity_romanization_test" />

	<Button
		android:id="@+id/btTryToKanaTest"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_alignParentLeft="true"
		android:layout_below="@id/btTryRomanizationTest"
		android:layout_marginTop="8dp"
		android:onClick="onTestToKanaClicked"
		android:text="@string/title_activity_to_kana_test" />

</RelativeLayout>